--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -1,6 +1,13 @@
 {% extends "quiz/base.html" %}
 {% block content %}
+    {% for quiz in quizzes %}
+        {% ifchanged quiz.author %}
+            <h1 class="mb-3">Quizzes by {{ quiz.author.first_name }} {{ quiz.author.last_name }}</h1>
+        {% endifchanged %}
+    {% endfor %}
+    {% comment %}
     <h1 class="mb-3">Quizzes by {{ view.kwargs.username }}</h1>
+    {% endcomment %}
     <!-- Filter / Search -->
     <div class="row searchFilter">
         <div class="col-sm-12">
@@ -35,7 +42,7 @@
                         <img class="rounded-circle article-img" src="{{ quiz.image.url }}">
                         <div class="media-body">
                             <div class="article-metadata">
-                                <a class="mr-2" href="{% url 'user-quiz' quiz.author.username %}">{{ quiz.author }}</a>
+                                <a class="mr-2" href="{% url 'user-quiz' quiz.author.username %}">{{ quiz.author.first_name }} {{ quiz.author.last_name }}</a>
                                 <small class="text-muted">{{ quiz.date_created|date:"F d, Y" }}</small>    <!-- see DJANGO date formatting template documentation -->
                             </div>
                             <h2><a class="article-title" href="{% url 'quiz-detail' quiz.id %}">{{ quiz.question }}</a></h2>
