--- a/django_quiz/quiz/templates/quiz/results.html
+++ b/django_quiz/quiz/templates/quiz/results.html
@@ -2,64 +2,71 @@
 {% load bootstrap %}
 {% block content %}
 
+    <script>
+        console.log( {{ answer.quiz_id.anonymous }} )
+    </script>
+
     <!-- Results -->
     <div id="myTable">
         <table class="table table-hover table-striped">
             <!-- NOT anonymous -->
-            {% if answer.quiz_id.anonymous == "No" %}
-                <thead>
-                <tr>
-                    <th>Course</th>
-                    <th>Quiz ID</th>
-                    {% comment %} <th>DateTime</th> {% endcomment %}
-                    <th>NMec</th>
-                    <th>Answer</th>
-                    <th>Time</th>
-                    <th>Evaluation</th>
-                </tr>
-                </thead>
-                <tbody>
-                    {% for answer in answers %}
-                        {% if answer.evaluation == "right" %}
-                        <tr class="table-success">
-                        {% else %}
-                        <tr class="table-danger">
-                        {% endif %}
-                            <td>{{ answer.quiz_id.course.all|join:", "  }}</td>
-                            <td>{{ answer.quiz_id.id }}</td>
-                            {% comment %} <td>{{ answer.date_time|date:"F d, Y - H:i:s" }}</td> {% endcomment %}
-                            <td>{{ answer.student }}</td>
-                            <td>{{ answer.answer }}</td>
-                            <td>{{ answer.time }}</td>
-                            <td>{{ answer.evaluation }}</td>
+            {% for ans in answers %}
+                {% ifchanged ans.quiz_id.id %}
+                    {% if ans.anonymous == "No" %}
+                        <thead>
+                        <tr>
+                            <th>Course</th>
+                            <th>Quiz ID</th>
+                            {% comment %} <th>DateTime</th> {% endcomment %}
+                            <th>NMec</th>
+                            <th>Answer</th>
+                            <th>Time</th>
+                            <th>Evaluation</th>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            {% else %}
-                <thead>
-                <tr>
-                    <th>Course</th>
-                    <th>Quiz ID</th>
-                    <th>Answer</th>
-                    <th>Time</th>
-                </tr>
-                </thead>
-                <tbody>
-                    {% for answer in answers %}
-                        <tr class="table-striped">
-                                <td>{{ answer.quiz_id.course.all|join:", "  }}</td>
-                            <td>{{ answer.quiz_id.id }}</td>
-                            <td>{{ answer.answer }}</td>
-                            <td>{{ answer.time }}</td>
+                        </thead>
+                        <tbody>
+                            {% for answer in answers %}
+                                {% if answer.evaluation == "right" %}
+                                <tr class="table-success">
+                                {% else %}
+                                <tr class="table-danger">
+                                {% endif %}
+                                    <td>{{ answer.quiz_id.course.all|join:", "  }}</td>
+                                    <td>{{ answer.quiz_id.id }}</td>
+                                    {% comment %} <td>{{ answer.date_time|date:"F d, Y - H:i:s" }}</td> {% endcomment %}
+                                    <td>{{ answer.student }}</td>
+                                    <td>{{ answer.answer }}</td>
+                                    <td>{{ answer.time }}</td>
+                                    <td>{{ answer.evaluation }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    {% else %}
+                        <thead>
+                        <tr>
+                            <th>Course</th>
+                            <th>Quiz ID</th>
+                            <th>Answer</th>
+                            <th>Time</th>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            {% endif %}
+                        </thead>
+                        <tbody>
+                            {% for answer in answers %}
+                                <tr class="table-striped">
+                                        <td>{{ answer.quiz_id.course.all|join:", "  }}</td>
+                                    <td>{{ answer.quiz_id.id }}</td>
+                                    <td>{{ answer.answer }}</td>
+                                    <td>{{ answer.time }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    {% endif %}
+                {% endifchanged %}
+            {% endfor %}
         </table>
         <button class="btn btn-outline-info" id="export_btn">Export to Excel</button>
     </div>
     
-
     <!-- https://redstapler.co/sheetjs-tutorial-html-table-to-excel/ -->
     <script>
         var wb = XLSX.utils.table_to_book(document.getElementById('myTable'), {sheet:"Sheet JS"});
@@ -74,6 +81,6 @@
         saveAs(new Blob([s2ab(wbout)],{type:"application/octet-stream"}), 'test.xlsx');
         });
     </script>
-    
+
 
 {% endblock content %}
