--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -23,6 +23,7 @@
                                     {% if object.author == user %}
                                         <button class="btn btn-outline-success btn-sm mt-1 mb-1" type="button" onClick=="goFullscreen()" style="visibility: visible;" id="start_btn">Start</button>
                                     {% endif %}
+                                    <h2 class="article-title">{{ quiz.title }}</h2>
                                 </div>
                             </div>
                         </div>
