--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -45,7 +45,7 @@
                                 <a class="mr-2" href="{% url 'user-quiz' quiz.author.username %}">{{ quiz.author.first_name }} {{ quiz.author.last_name }}</a>
                                 <small class="text-muted">{{ quiz.date_created|date:"F d, Y" }}</small>    <!-- see DJANGO date formatting template documentation -->
                             </div>
-                            <h2><a class="article-title" href="{% url 'quiz-detail' quiz.id %}">{{ quiz.question }}</a></h2>
+                            <h2><a class="article-title" href="{% url 'quiz-detail' quiz.id %}">{{ quiz.title }}</a></h2>
                             <p class="article-content">{{ quiz.course.all|join:", " }}</p>
                         </div>
                     </article>
