made changes to firmware for new router, added quiz title to import, added 'change password' option

--- a/django_quiz/quiz/templates/quiz/quiz_form.html
+++ b/django_quiz/quiz/templates/quiz/quiz_form.html
@@ -48,8 +48,11 @@
 
         function fillForm(data) {
             // Course - maybe remove this?
-            //var course_text = document.getElementById("sjs-C4").textContent;
+            //var course_text = document.getElementById("sjs-B4").textContent;
             //document.getElementById("id_course").value = course_text;
+            // Question
+            var title = document.getElementById("sjs-C4").textContent;
+            document.getElementById("id_title").value = title;
             // Question
             var question = document.getElementById("sjs-D4").textContent;
             document.getElementById("id_question").value = question;
