cleaned things up a bit

--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -30,7 +30,7 @@
 
                         <!-- DETAIL -->
                         <!-- Quiz -->
-                        <div class="container align-items-start bg-white" id="quiz_detail" style="display: none;"> <!-- align-items-center -->
+                        <div class="container align-items-start bg-white" id="quiz_detail" style="display: none;">
                             <div class="row justify-content-center">  <!-- quiz-body  -->
                                 <!-- Question -->
                                 <div class="container">
@@ -73,7 +73,7 @@
 
         <!-- FULLSCREEN -->
         <!-- Quiz -->
-        <div class="container align-items-start bg-white" style="display: none;" id="myQuiz"> <!-- align-items-center -->
+        <div class="container align-items-start bg-white" style="display: none;" id="myQuiz">
             <div class="row justify-content-center">  <!-- quiz-body  -->
                 <!-- Question -->
                 <div class="container" id="quiz_question">
@@ -113,14 +113,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- Footer Buttons -->
-                {% comment %}
-                <div class"container">
-                    <div class="quiz-footer" id="btn_footer">
-                        <button class="btn btn-outline-info btn-sm mb-1 mr-1" type="button" id="play_btn">Play</button>
-                    </div>
-                </div>
-                {% endcomment %}
             </div>
         </div>
 
