--- a/django_quiz/quiz/templates/quiz/home.html
+++ b/django_quiz/quiz/templates/quiz/home.html
@@ -2,12 +2,6 @@
 {% load bootstrap %}
 {% block content %}
 
-    {% comment %} <!-- New Filter -->
-    <form action="" method="GET" id="myFilter2">
-        {{ filter.form|bootstrap}}
-        <button type="submit" class="btn btn-info">Search</button>
-    </form> {% endcomment %}
-
     <div class="row searchFilter">
         <div class="col-sm-12">
             <div class="input-group">
@@ -41,7 +35,7 @@
 
     <!-- Quizzes -->
     <div id="myItems">
-        {% for quiz in quizzes %}  {% comment %}  {% for quiz in quizzes %} {% for quiz in filter.qs %} {% endcomment %}
+        {% for quiz in quizzes %}
             <div class="card card-signin my-3">
                 <div class="card-body">
                     <article class="media">
@@ -59,12 +53,6 @@
             </div>
         {% endfor %}
     </div>
-    
-    {% comment %} <script>
-        function autoSubmit() {
-            document.getElementById("myFilter2").submit();
-        }
-    </script> {% endcomment %}
 
     <!-- Filter - JavaScript function -->
     <script>
