--- a/django_quiz/quiz/templates/quiz/base.html
+++ b/django_quiz/quiz/templates/quiz/base.html
@@ -57,10 +57,10 @@
                         {% if user.is_authenticated %}
                             <!-- Quiz Dropdown Menu -->
                             {% comment %} <button class="btn btn-light" type="button" id="lesson_btn">New Lesson</button> {% endcomment %}
-                            <a class="nav-item nav-link" href="{% url 'quiz-create' %}">Create New</a>
-                            <a class="nav-item nav-link" href="{% url 'user-quiz' user.username %}">Quizzes</a>
+                            <a class="nav-item nav-link" href="{% url 'quiz-create' %}">New Question</a>
+                            <a class="nav-item nav-link" href="{% url 'user-quiz' user.username %}">My Questions</a>
                             <a class="nav-item nav-link" href="{% url 'lesson-create' %}">New Lesson</a>
-                            <a class="nav-item nav-link" href="{% url 'quiz-lessons' %}">Lessons</a>
+                            <a class="nav-item nav-link" href="{% url 'quiz-lessons' %}">My Lessons</a>
                             <a class="nav-item nav-link" href="{% url 'quiz-sessions' %}">Results</a>
                             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                             <a class="nav-item nav-link" href="{% url 'account' %}">Account</a>
